# tfm-rag-chatbot-deploy-tool

./: .gitignore  .pre-commit-config.yaml  CODE_REVIEW_REPORT.md  README.md  code-samples-2026-05-19.md  handover.md  questions-pending.md  subagent-questions.md
backend/: .dockerignore  Dockerfile  README.md  docker-entrypoint.sh  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0002_users_tenants.py  0003_provider_credentials.py  0004_knowledge_bases_and_sources.py  0005_ingestion_jobs.py  0006_chatbots_and_n2m.py  0007_chat_sessions_and_messages.py  0008_chatbots_public_key.py  0009_embedding_selection_optional.py  0010_eval_runs.py  0011_drop_router_llm_selection.py  0012_chatbot_role_llm_selections.py  0013_pipeline_config_self_correction.py  0014_sources_description.py  0015_ingestion_jobs_stage.py  0016_eval_datasets.py  0017_eval_runs_dataset_tokens.py  0018_users_is_superadmin.py  0019_eval_runs_cancelled_status.py  0020_eval_runs_judge_credential.py  0021_eval_runs_drop_judge_provider_baseurl.py  0022_kb_description_llm.py  0023_credential_max_concurrency.py  0024_credential_min_interval.py  0025_eval_runs_drop_cost_columns.py
backend/scripts/: audit-eval-sql.py
backend/src/tfm_rag/application/admin/: overview.py
backend/src/tfm_rag/application/auth/: bootstrap_tenant.py  login_user.py  login_with_google.py  register_user.py
backend/src/tfm_rag/application/chat/: abstain.py  answer_query.py  append_message.py  create_session.py  generate_sql.py  get_session.py  grade.py  list_sessions.py  metering.py  query_database.py  retrieve_docs.py  route.py  routing_context.py  sql_safety.py  synthesize.py  system_prompt.py  touch_session.py  widget_cors.py
backend/src/tfm_rag/application/chatbot_config/: create_chatbot.py  delete_chatbot.py  generate_welcome_messages.py  get_chatbot.py  get_chatbot_by_public_key.py  list_chatbots.py  suggest_welcome_messages.py  update_chatbot.py
backend/src/tfm_rag/application/evaluation/: dataset_db_loader.py  dataset_loader.py  execution_accuracy.py  manage_dataset.py  report_stats.py  report_writer.py  row_import.py  run_ragas_evaluation.py  seed_sql.py  token_count.py
backend/src/tfm_rag/application/integrations/: delete_credential.py  endpoint_resolver.py  list_credential_models.py  list_credentials.py  probe_embedding_dimension.py  test_credential.py  upsert_provider_credential.py  url_safety.py
backend/src/tfm_rag/application/knowledge/: attach_database_source.py  attach_document_source.py  create_knowledge_base.py  delete_knowledge_base.py  describe_document.py  detach_source.py  get_ingestion_job.py  get_knowledge_base.py  ingest_source.py  list_knowledge_bases.py  list_sources.py  reindex_source.py  run_ingestion_job.py  test_source_connection.py  update_knowledge_base.py
backend/src/tfm_rag/cli/: eval_ragas.py
backend/src/tfm_rag/domain/catalog/: agent_tools.py  embedding_providers.py  eval_metrics.py  eval_scenarios.py  evaluator_schemas.py  llm_providers.py  llm_roles.py  routes.py
backend/src/tfm_rag/domain/ports/: llm.py  (+15 more)
backend/src/tfm_rag/infrastructure/: settings.py
backend/tests/: conftest.py
backend/tests/fixtures/loaders/: sample.csv  sample.docx  sample.md
backend/tests/integration/: conftest.py  test_alembic_baseline.py  test_attach_database_source_endpoint.py  test_auth_endpoints.py  test_chat_agent_loop_flow.py  test_chat_sessions_flow.py  test_chat_sessions_migration.py  test_chat_sql_flow.py  test_chatbot_endpoints.py  test_chatbot_widget_config_endpoints.py  test_chatbots_migration.py  test_credential_update_after_commit.py  test_db_source_flow.py  test_doc_ingestion_flow.py  test_engine.py  test_eval_dataset_runs.py  test_eval_datasets_endpoints.py  test_eval_datasets_migration.py  test_eval_datasets_processing.py  test_eval_ragas_cli_flow.py  test_eval_run_cancel.py  test_eval_runs_cancelled_migration.py  test_eval_runs_migration_0017.py  test_health_endpoint.py  test_ingestion_jobs_migration.py  test_knowledge_endpoints.py  test_knowledge_migration.py  test_oe2_loaders_ingestion.py  test_openai_provider_live.py  test_public_widget_endpoints.py  test_qdrant_health.py  test_read_after_write_commit.py  test_repository_tenant_isolation.py  test_retrieve_docs_flow.py  test_sources_description_migration.py  test_sql_provisioner.py  test_users_tenants_migration.py
backend/tests/unit/: test_abstain.py  test_admin_overview_router.py  test_agent_tools_catalog.py  test_answer_query.py  test_answer_query_endpoint_resolution.py  test_answer_query_persist_and_contexts.py  test_answer_query_routing_labels.py  test_app_cors_wiring.py  test_attach_database_source.py  test_attach_document_source_use_case.py  test_auth_cookie.py  test_auth_router_cookie.py  test_auth_router_wiring.py  test_by_paragraph_chunker.py  test_chat_sessions_use_cases.py  test_chatbot_use_cases.py  test_chunker_factory.py  test_chunking_config.py  test_citation_vo.py  test_coverage_script.py  test_csv_loader.py  test_database_source_tester.py  test_dataset_db_loader.py  test_dataset_loader.py  test_delete_credential_use_case.py  test_describe_document.py  test_dispatcher_registration.py  test_docx_loader.py  test_embedder_dispatcher.py  test_embedding_selection.py  test_endpoint_resolver.py  test_error_handler_registration.py  test_eval_dataset_models.py  test_eval_dataset_vo.py  test_eval_datasets_new_routes.py  test_eval_datasets_repo.py  test_eval_datasets_router_wiring.py  test_eval_run_model.py  test_eval_run_out_names.py  test_eval_run_trace_tokens.py  (+100 more)
(+369 files in other folders)
