[project]
name = "tfm-rag-backend"
version = "0.1.0"
description = "TFM RAG Chatbot Platform — backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "python-jose[cryptography]>=3.3",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "qdrant-client>=1.12",
    "pypdf>=5.1",
    "python-multipart>=0.0.9",
    "httpx>=0.28",
    "structlog>=24.4",
    "bcrypt>=4.2",
    "google-auth>=2.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "testcontainers>=4.8",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tfm_rag"]
